<resources>
    <string name="app_name">Calculadora</string>
    <string name="primer_numero">Primer numero</string>
    <string name="segundo_numero">Segundo numero</string>
    <string name="resultado">Resultado</string>
    <string name="calcular">Calcular</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="division">Division</string>

</resources>
