<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#b8b894"
    tools:context="mainactivity.gabrielosorio.com.punto2calculadora.MainActivityP2Calculadora">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="#d6d6c2">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:weightSum="1"
            android:background="#d6d6c2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/resultado"
                android:id="@+id/eVer_result"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:layout_weight="0.80"/>

        </LinearLayout>

    </LinearLayout>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/primer_numero"
        android:id="@+id/ePN"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/segundo_numero"
        android:id="@+id/eSN"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eRadio_suma"
            android:text="@string/suma"
            android:onClick="onRadioButtonClicked"
            android:textStyle="italic"
        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eRadio_resta"
            android:text="@string/resta"
            android:onClick="onRadioButtonClicked"
            android:textStyle="italic"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eRadio_mult"
            android:text="@string/multiplicacion"
            android:onClick="onRadioButtonClicked"
            android:textStyle="italic"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eRadio_div"
            android:text="@string/division"
            android:onClick="onRadioButtonClicked"
            android:textStyle="italic"/>

    </RadioGroup>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:textColor="@color/white"
                android:id="@+id/button"
                android:onClick=""
                android:textSize="15sp"
                android:background="@color/blue"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
